Add server and db.json

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -5,6 +5,10 @@
 @layer components {
 
 
+    .rtl {
+        direction: rtl;
+    }
+
     .center {
         @apply flex flex-row items-center justify-center;
     }
