--- a/public/customStyle.css
+++ b/public/customStyle.css
@@ -4,3 +4,30 @@
     width: 80%;
 
 }
+
+/* app layout */
+.appLayout {
+   
+    display: flex;
+    justify-content: space-between;
+    /* height: calc(100vh - 130px); */
+    /* background-color: var(--text-100); */
+    align-items: stretch;
+}
+
+.sidebar {
+    width: 35%;
+    overflow-y: scroll;
+    padding-right: 1rem;
+}
+
+#map_holder {
+    position: relative;
+}
+
+#map {
+    position: sticky;
+    top: 0;
+    right: 0;
+    left: 0;
+}
